Changed canvas code by changing dimensions and adding ID

--- a/index.html
+++ b/index.html
@@ -74,15 +74,8 @@ console.log("This file last modified " + docMod); // generates message in javaSc
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 	
-<canvas width="300" height="225"></canvas>
-<!-- this code displays blank canvas to be 300*225 in dimensions -->
-	
-function draw_b() {
-  var b_canvas = document.getElementById("b");
-  var b_context = b_canvas.getContext("2d");
-  b_context.fillRect(50, 25, 150, 100);
-}
-<!-- function gives an item to be drawn onto to canvas; solid rectangle can be added -->
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
+<!-- this code displays blank canvas to be 300*225 in dimensions; ID gives name to function -->
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
