--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 	
-<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
+<canvas id="myCanvas" width="200" height="100" style="border:5px dotted #000000;"></canvas>
 <!-- this code displays blank canvas to be 300*225 in dimensions; ID gives name to function -->
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
