--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ function draw_b() {
 }
 
 <a href="#b" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-xxlarge"> Draw a Rectangle </a>
-
 </script>
+<!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified after; element retrieved by ID "b" -->
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
