--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <!-- this code displays blank canvas to be 300*225 in dimensions; ID gives name to function -->
 	
 <script>
-function draw_b() {
-  var b_canvas = document.getElementById("b");
-  var b_context = b_canvas.getContext("2d");
-  b_context.fillRect(50, 25, 150, 100);
-}
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.beginPath();
+ctx.fillRect(50, 25, 150, 100);
+ctx.stroke();
 
 <a href="#b" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-xxlarge"> Draw a Rectangle </a>
 </script>
