Took out button and changed code on rectangle drawing to try to make it work

--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.beginPath();
-ctx.fillRect(50, 25, 150, 100);
+ctx.Rect(50, 25, 150, 100);
 ctx.stroke();
-
-<a href="#b" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-xxlarge"> Draw a Rectangle </a>
 </script>
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified after; element retrieved by ID "b" -->
 	
