Changed code to try to draw rectangle- used lineTo command and tried to adjust to draw rectangle

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.beginPath();
-ctx.Rect(50, 25, 150, 100);
+ctx.lineTo(200, 100, -100, 200)
 ctx.stroke();
 </script>
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified after; element retrieved by ID "b" -->
