--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <!-- this code displays blank canvas to be 300*225 in dimensions; ID gives name to function -->
 	
 <script>
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.beginPath();
-ctx.lineTo(200, 100, -100, 200)
-ctx.stroke();
+function draw_b() {
+  var b_canvas = document.getElementById("b");
+  var b_context = b_canvas.getContext("2d");
+  b_context.fillRect(50, 25, 150, 100);
+}
 </script>
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified after; element retrieved by ID "b" -->
 	
