--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;"></canvas>
 <!-- this code displays blank canvas to be 300*225 in dimensions; ID gives name to function -->
-	
-function draw_b() {
-  var b_canvas = document.getElementById("b");
-  var b_context = b_canvas.getContext("2d");
-  b_context.fillRect(50, 25, 150, 100);
-}
 
+<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.beginPath();
+ctx.rect(20, 20, 150, 100);
+ctx.stroke();
+</script>
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified after; element retrieved by ID "b" -->
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
