Added code in rectangle drawing code to fill rectangle; added comments below it

--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@ var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.beginPath();
 ctx.rect(20, 20, 150, 100);
+ctx.fillRect(20,20,150,100);
 ctx.stroke();
 </script>
-<!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified after; element retrieved by ID "b" -->
+<!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
+<!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
+<!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
