--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ ctx.stroke();
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
 <!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
 <!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
-<a href="fillRect" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-xxlarge"> Draw a rectangle </a>
+<a href="fillRect" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
