--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@ ctx.stroke();
 <!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
 <a href="fillRect" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
 	
+<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.font = "30px Selima Script";
+ctx.fillText("Sarayu Parthasarathy", 10, 50);
+</script>
+	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
