--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ var ctx = c.getContext("2d");
 ctx.beginPath();
 ctx.rect(20, 20, 150, 100);
 ctx.fillRect(20,20,150,100);
+ctx.textAlign = "center";
 ctx.stroke();
 </script>
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
@@ -94,6 +95,7 @@ ctx.stroke();
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.font = "30px Selima Script";
+ctx.textAlign = "center";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);
 </script>
 <a href="fillRect" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw Sarayu's name </a>
