--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ function myCanvas() {
   var img = document.getElementById("Manatees");
   ctx.drawImage(img,10,10);
 }
+</script>
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
