--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ ctx.stroke();
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
 <!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
 <!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
-<a href="fillRect" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
+<a href="#" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
 	
 <script>
 var c = document.getElementById("myCanvas");
@@ -96,17 +96,13 @@ var ctx = c.getContext("2d");
 ctx.font = "30px Selima Script";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);
 </script>
-<a href="fillRect" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw Sarayu's name </a>
+<a href="#" onclick="c" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw Sarayu's name </a>
 	
 <p>Image to use:</p>
-<img id="scream" src="https://static.scientificamerican.com/sciam/cache/file/0C1CC66D-4C4C-4D31-959CF5FD37FBA528_source.jpg" alt="Manatees" width="220" height="277">
+<img id="scream" src="https://static.scientificamerican.com/sciam/cache/file/0C1CC66D-4C4C-4D31-959CF5FD37FBA528_source.jpg" alt="Manatees" width="220" height="220">
 
-<p>Canvas to fill:</p>
 <canvas id="myCanvas" width="250" height="300"
 style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML canvas tag.</canvas>
-
-<p><button onclick="myCanvas()">Try it</button></p>
 
 <script>
 function myCanvas() {
