Changed canvas that manatee is printed onto to the one already on the page by adjusting properties

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ ctx.fillText("Sarayu Parthasarathy", 10, 50);
 <p>Image to use:</p>
 <img id="scream" src="https://static.scientificamerican.com/sciam/cache/file/0C1CC66D-4C4C-4D31-959CF5FD37FBA528_source.jpg" alt="Manatees" width="220" height="220">
 
-<canvas id="myCanvas" width="250" height="300"
-style="border:1px solid #d3d3d3;">
+<canvas id="myCanvas" width="400" height="300"
+style="border:5px dotted #000000;">
 
 <script>
 function myCanvas() {
