Added canvas closing bracket to canvas

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ ctx.fillText("Sarayu Parthasarathy", 10, 50);
 
 <canvas id="myCanvas" width="400" height="300"
 style="border:5px dotted #000000;">
+</canvas>
 
 <script>
 function myCanvas() {
