--- a/index.html
+++ b/index.html
@@ -84,35 +84,22 @@ ctx.beginPath();
 ctx.rect(20, 20, 150, 100);
 ctx.fillRect(20,20,150,100);
 ctx.stroke();
-</script>
+
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
 <!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
 <!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
 	
-<script>
+
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.font = "30px Selima Script";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);
+	
+var myCanvas = document.getElementById("myCanvas");
+myCanvas.width = myCanvas.width;
+	
 </script>
 
-	
-<img id="Manatees" src="https://static.scientificamerican.com/sciam/cache/file/0C1CC66D-4C4C-4D31-959CF5FD37FBA528_source.jpg" alt="Manatees" width="220" height="200">
-
-
-<script>
-function myCanvas() {
-  var c = document.getElementById("myCanvas");
-  var ctx = c.getContext("2d");
-  var img = document.getElementById("Manatees");
-  ctx.drawImage(img,10,10);
-}
-
-var canvas = document.getElementById("Manatees");
-var context = canvas.getContext('2d');
-context.clearRect(0, 0, canvas.width, canvas.height); 
-</script>
-	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
