--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 
 <script>
+	
+<button type="button" onclick="ctx.beginPath();">Draw a rectangle! </button>	
+
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
-ctx.beginPath();
 ctx.rect(20, 20, 150, 100);
 ctx.fillRect(20,20,150,100);
 ctx.stroke();
