--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
+ctx.beginPath();
 ctx.rect(20, 20, 150, 100);
 ctx.fillRect(20,20,150,100);
 ctx.stroke();
