--- a/index.html
+++ b/index.html
@@ -96,7 +96,20 @@ var ctx = c.getContext("2d");
 ctx.font = "30px Selima Script";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);	
 </script>
+	
+<script>
+let canvas = document.getElementById("myCanvas");
+let ctx = canvas.getContext("2d"); 
 
+const drawImage = (https://s3-us-west-2.amazonaws.com/seacowsocial/site_uploads/files/000/000/001/original/screen-shot-2015-06-09-at-11-22-55-pm-1.png) => {
+    const image = new Image();
+    image.src = https://s3-us-west-2.amazonaws.com/seacowsocial/site_uploads/files/000/000/001/original/screen-shot-2015-06-09-at-11-22-55-pm-1.png;
+    image.onload = () => {
+       ctx.drawImage(image, 0, 0)
+    }
+}
+</script>
+	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
