--- a/index.html
+++ b/index.html
@@ -97,14 +97,19 @@ ctx.font = "30px Selima Script";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);	
 </script>
 	
-<script>
-<p>Image to use:</p>
 <img id="scream" width="220" height="277" src="img_the_scream.jpg" alt="The Scream">
 
-<p>Canvas:</p>
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 Your browser does not support the HTML5 canvas tag.
 </canvas>
+
+<script>
+window.onload = function() {
+  var c = document.getElementById("myCanvas");
+  var ctx = c.getContext("2d");
+  var img = document.getElementById("scream");
+  ctx.drawImage(img, 10, 10, 150, 180);
+}
 </script>
 	
 <script>
