Changed code to get manatee pic to show on page

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@ ctx.font = "30px Selima Script";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);	
 </script>
 	
-<img id="cat" src="images/cat.png" alt="sleeping cat" width="177" height="113">
+<img id="manatee" src="https://static01.nyt.com/images/2021/12/07/science/07cli-manatees1/07cli-manatees1-mobileMasterAt3x.jpg" alt="cute manatees" width="177" height="113">
 <canvas id="e" width="177" height="113"></canvas>
 <script>
 window.onload = function() {
   var canvas = document.getElementById("e");
   var context = canvas.getContext("2d");
-  var cat = document.getElementById("cat");
-  context.drawImage(cat, 0, 0);
+  var manatee = document.getElementById("manatee");
+  context.drawImage(manatee, 0, 0);
 };
 </script>
 	
