Changed picture code element id retrieval

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ ctx.fillText("Sarayu Parthasarathy", 10, 50);
 window.onload = function() {
   var canvas = document.getElementById("e");
   var context = canvas.getContext("2d");
-  var manatee = document.getElementById("manatee");
+  var manatee = document.getElementById("e");
   context.drawImage(manatee, 0, 0);
 };
 </script>
