Changed button innerHTML and function

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 
 <script>
 let btn = document.createElement("button")
-btn.innerHTML = "myCanvas";
-btn.onclick = function (c) {
+btn.innerHTML = "Draw a rectangle";
+btn.onclick = function (fillRect) {
 	alert("Button is clicked");
 };
 document.body.appendChild(btn);
