--- a/index.html
+++ b/index.html
@@ -33,14 +33,43 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
       <link rel="stylesheet" href="w3-colors-flat.css">
    </head> 
 
-
 <script>
 var docMod = document.lastModified; // loads last modified time stamp into docMod variable
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 </script>
 
+<canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
+<!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 
+<script>
+let btn = document.createElement("button")
+btn.innerHTML = "Draw a rectangle";
+btn.onclick = function (fillRect) {
+	alert("Button is clicked");
+};
+document.body.appendChild(btn);
+	</script>
+	
+<script>	
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.beginPath();
+ctx.rect(20, 20, 150, 100);
+ctx.fillRect(20,20,150,100);
+ctx.stroke();
+	</script>
+	
+<!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
+<!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
+<!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
+
+<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.font = "30px Selima Script";
+ctx.fillText("Sarayu Parthasarathy", 10, 50);	
+	</script>
 
 <style>	
 .body {
@@ -74,39 +103,23 @@ console.log("This file last modified " + docMod); // generates message in javaSc
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 	
-<canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
-<!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
+<button onclick="myFunction()">Click Me</button>
 
-<script>
-let btn = document.createElement("button")
-btn.innerHTML = "Draw a rectangle";
-btn.onclick = function (fillRect) {
-	alert("Button is clicked");
-};
-document.body.appendChild(btn);
-	</script>
-	
-<script>	
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.beginPath();
-ctx.rect(20, 20, 150, 100);
-ctx.fillRect(20,20,150,100);
-ctx.stroke();
-	</script>
-	
-<!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
-<!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
-<!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
+<div id="myDIV">
+  This is my DIV element.
+</div>
 	
 <script>
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.font = "30px Selima Script";
-ctx.fillText("Sarayu Parthasarathy", 10, 50);	
-	</script>
+function myFunction() {
+  var x = document.getElementById("myDIV");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 	
-
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
