Added button to draw name onto canvas

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@ ctx.stroke();
 <!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
 
 <script>
+let btn = document.createElement("button")
+btn.innerHTML = "Draw my name";
+btn.onclick = function (ctx.fillText) {
+	alert("Button is clicked");
+};
+document.body.appendChild(btn);
+	</script>
+	
+<script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.font = "30px Selima Script";
