--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 
+<script>
+let btn = document.createElement("button")
+btn.innerHTML = "Draw a rectangle";
+btn.onclick = function (fillRect) {
+	alert("Button is clicked");
+};
+document.body.appendChild(btn);
+	</script>
+	
 <script>	
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
@@ -87,15 +96,6 @@ ctx.stroke();
 <!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
 <!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
 
-<script>
-let btn = document.createElement("button")
-btn.innerHTML = "Draw my name";
-btn.onclick = function (ctx.fillText) {
-	alert("Button is clicked");
-};
-document.body.appendChild(btn);
-	</script>
-	
 <script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
