Changed function on make a rectangle button

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <script>
 let btn = document.createElement("button")
 btn.innerHTML = "Draw a rectangle";
-btn.onclick = function (fillRect) {
+btn.onclick = function (ctx.fillRect) {
 	alert("Button is clicked");
 };
 document.body.appendChild(btn);
