Modified button by changing function to try to add to canvas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
    </head> 
 
 <script>
+function = addRect
+	</script>
+	
+<script>
 var docMod = document.lastModified; // loads last modified time stamp into docMod variable
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
@@ -78,7 +82,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 function c() {
     document.getElementById("Draw a rectangle").style.display = "";
 }
-<button onclick="Draw a rectangle">Tests</button>
+<button onclick="Draw a rectangle">addRect</button>
 
 <div id="Draw a rectangle" style="display:none">
     tests here!
