--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
       <link rel="stylesheet" href="w3.css">
       <link rel="stylesheet" href="w3-colors-flat.css">
    </head> 
-
-<script>
-function = addRect
-	</script>
 	
 <script>
 var docMod = document.lastModified; // loads last modified time stamp into docMod variable
@@ -79,14 +75,12 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 
 <script>
-function c() {
-    document.getElementById("Draw a rectangle").style.display = "";
-}
-<button onclick="Draw a rectangle">addRect</button>
-
-<div id="Draw a rectangle" style="display:none">
-    tests here!
-</div>	
+let btn = document.createElement("button")
+btn.innerHTML = "Draw a rectangle";
+btn.onclick = var b_canvas = document.getElementById("b"); b_canvas.width = b_canvas.width; (ctx.fillRect) {
+alert("Button is clicked");
+};
+document.body.appendChild(btn);
 	</script>
 	
 <script>	
