Tried adding button to html section instead of script section with id

--- a/index.html
+++ b/index.html
@@ -71,17 +71,15 @@ console.log("This file last modified " + docMod); // generates message in javaSc
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 	
+<div id="content" class="w3-container">
+     
+var b_canvas = document.getElementById("b");
+b_canvas.width = b_canvas.width;
+     
+<a href="#b" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
+	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
-
-<script>
-let btn = document.createElement("button")
-btn.innerHTML = "Draw a rectangle";
-btn.onclick = var b_canvas = document.getElementById("b"); b_canvas.width = b_canvas.width; (ctx.fillRect) {
-alert("Button is clicked");
-};
-document.body.appendChild(btn);
-	</script>
 	
 <script>	
 var c = document.getElementById("myCanvas");
