--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
      
-<a href="#b_canvas" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
+<input id="Draw a rectangle" type="button" value="clickme" onclick="doFunction(b);" />
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
