--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
      
-<input id="Draw a rectangle" type="button" value="clickme" onclick="doFunction(b);" />
+<a href="#rectAdd" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 	
 <script>
-function= var b_canvas = document.getElementById("b");
+function rectAdd(){
+	var b_canvas = document.getElementById("b");
 b_canvas.width = b_canvas.width;
 	</script>
 	
