--- a/index.html
+++ b/index.html
@@ -73,24 +73,21 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
      
-<a href="#rectAdd" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
+<a href="#" class="w3-ripple w3-black w3-hover-white w3-round-large w3-padding-large w3-large"> Draw a rectangle </a>
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 	
 <script>
-function rectAdd(){
+function b(){
 	var b_canvas = document.getElementById("b");
 b_canvas.width = b_canvas.width;
 	</script>
 	
 <script>	
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.beginPath();
-ctx.rect(20, 20, 150, 100);
-ctx.fillRect(20,20,150,100);
-ctx.stroke();
+var b_canvas = document.getElementById("b");
+var b_context = b_canvas.getContext("2d");
+b_context.fillRect(50, 25, 150, 100);
 	</script>
 	
 <!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
