--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
      
 <a let btn = document.createElement("button")
 btn.innerHTML = "Draw a rectangle";
-btn.onclick = function draw_b(); {
+btn.onclick = function draw_b(){
 	alert("Button is clicked");
 };
 document.body.appendChild(btn);</a>
