--- a/index.html
+++ b/index.html
@@ -72,23 +72,9 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 	
 <div id="content" class="w3-container">
-     
-<a let btn = document.createElement("button")
-btn.innerHTML = "Draw a rectangle";
-btn.onclick = function draw_b(){
-	alert("Button is clicked");
-};
-document.body.appendChild(btn);</a>
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
-	
-<script>
-function draw_b(){
-	var b_canvas = document.getElementById("myCanvas");
-b_canvas.width = b_canvas.width;
-}
-	</script>
 	
 <script>	
 var c = document.getElementById("myCanvas");
@@ -106,7 +92,7 @@ ctx.stroke();
 <script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
-ctx.font = "30px Selima Script";
+ctx.font = "30px Arial";
 ctx.fillText("Sarayu Parthasarathy", 10, 50);	
 	</script>
 
