Added back code for name

--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@ ctx.fillRect(20,20,150,100);
 ctx.stroke();
 	</script>
 	
-<!-- function draw allows rectangle to be drawn on canvas; fillRect shows filled rectange with dimensions specified -->
-<!-- fillRect makes rectangle filled; adding same dimensions fills the whole rectangle -->
-<!-- 20, 20, 150, 100 means 20 x, 20 y, 150 width, 100 height- can be adjusted -->
+<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.font = "30px Arial";
+ctx.fillText("Sarayu Parthasarathy", 10, 50);	
+	</script>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
