--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <div let btn = document.createElement("button")
 btn.innerHTML = "Draw a rectangle";
 btn.onclick = function rectAdd(){
-	alert("Button is clicked"); >
+	alert("Button is clicked");
 };
-document.body.appendChild(btn);
+document.body.appendChild(btn); >
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
