--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div let btn = document.createElement("button")
 btn.innerHTML = "Draw a rectangle";
-btn.onclick = function rectAdd(){
+btn.onclick = function b_canvas.width(){
 	alert("Button is clicked");
 };
 document.body.appendChild(btn); >
