--- a/index.html
+++ b/index.html
@@ -73,32 +73,25 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
 	
-<div let btn = document.createElement("button")
-btn.innerHTML = "Draw a rectangle";
-btn.onclick = function b_canvas.width(){
-	alert("Button is clicked");
-};
-document.body.appendChild(btn); >
+	<div <button onclick = draw_b()"> </button> >
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 
 <script>
-function rectAdd(){
-	var b_canvas = document.getElementById("b")
-	b_canvas.width = b_canvas.width
-	</script>
-	
-<script>	
+function draw_b() {
+	var b_canvas = document.getElementById("b)
+	var b_context = b_canvas.getContext("2d")
+	b_context.fillRect(50, 25, 150, 100);
+}
+		
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.beginPath();
 ctx.rect(20, 20, 150, 100);
 ctx.fillRect(20,20,150,100);
 ctx.stroke();
-	</script>
 	
-<script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.font = "30px Arial";
