--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@ function draw_b() {
 	var b_context = b_canvas.getContext("2d")
 	b_context.fillRect(50, 25, 150, 100);
 }
+		
+<!-- var c = document.getElementById("myCanvas");  -->
+<!-- var ctx = c.getContext("2d"); -->
+<!-- ctx.beginPath(); -->
+<!-- ctx.rect(20, 20, 150, 100); -->
+<!-- ctx.fillRect(20,20,150,100); -->
+<!-- ctx.stroke(); -->
+
 	
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
