--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
 	
-	<div <button onclick = draw_b()"> </button> >
+	<div <button onclick ="draw_b()">Draw a rectangle</button> >
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
 
 <script>
 function draw_b() {
-	var b_canvas = document.getElementById("b)
-	var b_context = b_canvas.getContext("2d")
+	var b_canvas = document.getElementById("b");
+	var b_context = b_canvas.getContext("2d");
 	b_context.fillRect(50, 25, 150, 100);
 }
 		
