--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <div id="content" class="w3-container">
 	
-	<div <button onclick ="draw_b()">Draw a rectangle</button> >
+<button onclick ="draw_b()">Draw a rectangle </button>
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
