--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 
 <script>
 function draw_b() {
-	var b_canvas = document.getElementById("b");
+	var b_canvas = document.getElementById("draw_b");
 	var b_context = b_canvas.getContext("2d");
 	b_context.fillRect(50, 25, 150, 100);
 }
