Changed get element by ID to manatee under window.onload function

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function draw_c() {
 window.onload = function draw_d() {
   var d_canvas = document.getElementById("myCanvas");
   var d_context = d_canvas.getContext("2d");
-  var manatee = document.getElementById("myCanvas");
+  var manatee = document.getElementById("manatee");
   d_context.drawImage(manatee, 0, 0);
 };
 	
