switched elements of canvas and manatee picture on window.onload function

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ function draw_c() {
 }
 	
 window.onload = function draw_d() {
-  var canvas = document.getElementById("myCanvas");
+  var canvas = document.getElementById("manatee");
   var context = canvas.getContext("2d");
-var manatee = document.getElementById("manatee");
+var manatee = document.getElementById("myCanvas");
   context.drawImage(manatee, 0, 0);
 };
 	
