--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 <button onclick ="draw_c()">Write my name </button>
 	
-<button onclick ="draw_d()">Add a picture</button>
+<button onclick ="manatee">Add a picture</button>
 	
 <canvas id="myCanvas" width="400" height="300" style="border:5px dotted #000000;">
 <!-- this code displays blank canvas to be 400*300 in dimensions; ID gives name to function -->
