Added div closing brackets to end of html portion

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <!--scr is where link to image goes (image address used and numbers after-200,100-define size of picture -->
 <!--alt gives a name that describes image well for those who are blind to be able to have image read aloud -->
 <!-- canvas id below allows pic to be pasted onto canvas -->
+</div>
+</div>
 	
 <script>
 function draw_b() {
