Deleted window.onload from picture retrieval function

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function draw_d() {
 // canvas width equalling canvas width calls up canvas again so that screen looks blank
 // sets width and properties to default values
 	
-window.onload = function draw_e() {
+function draw_e() {
 	var e_canvas = document.getElementById("myCanvas");
 	var e_context = e_canvas.getContext("2d");
 	var e_manatee = document.getElementById("manatee");
