Added comments to show what p brackets do

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <p><button onclick ="draw_c()">Write my name </button></p>
 <!-- button writes name onto canvas -->
 <!-- function button corresponds to is draw_c; expressed in javascript portion -->
+<!-- p brackets on either side of buttons gives button its own indentation so that they can be stacked and go below canvas -->
 	
 <p><button onclick ="draw_d()">Reset canvas </button></p>
 <!-- button resets canvas and gets rids of element -->
